--- a/index.html
+++ b/index.html
@@ -6,38 +6,67 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>GrupoAVC - Marketing & e-Commerce</title>
 	<link rel="shortcut icon" href="img/faviconavc.png">
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<!-- Mi CSS Externo -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body class="grid contenedor-home contenedor-home-responsive">
-	<nav id="menu" class="header">
-		<a href="index.html">
-		<img class="logoavc" src="img/logoavc.png" alt="Logo de GrupoAVC Marketing & e-Commerce">
-		</a>
-		<ul>
-			<li><a href="pages/nosotros.html">Nosotros</a></li>
-			<li><a href="pages/servicios.html">Servicios</a></li>
-			<li><a href="pages/clientes.html">Clientes</a></li>
-			<li><a href="pages/contacto.html">Contacto</a></li>
-		</ul>
+<body>
+	<!-- inicia nav -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  		<div class="container-fluid">
+    		<a class="navbar-brand" href="index.html">Agencia LatteMedia</a>
+    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      			<span class="navbar-toggler-icon"></span>
+    		</button>
+    		<div class="collapse navbar-collapse" id="navbarNav">
+      			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        			<li class="nav-item">
+          				<a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+        			</li>
+        			<li class="nav-item">
+          				<a class="nav-link" href="pages/servicios.html">Servicios</a>
+        			</li>
+        			<li class="nav-item">
+          				<a class="nav-link" href="pages/clientes.html">Clientes</a>
+        			</li>
+        			<li class="nav-item">
+          				<a class="nav-link" href="pages/contacto.html">Contacto</a>
+        			</li>
+      			</ul>
+    		</div>
+  		</div>
 	</nav>
 	<!-- ends nav -->
-	<div id="banner">
-		<img src="img/slider2.png" alt="Banner principal compromiso GrupoAVC">
+	<!-- inicia banner -->
+	<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  		<div class="carousel-inner">
+    		<div class="carousel-item active">
+      			<img src="img/slider2.png" class="d-block w-100" alt="Banner principal compromiso Agencia LatteMedia">
+    		</div>
+  		</div>
 	</div>
-	<!-- ends header -->
-	<div id="cuerpo">
-		<section class="parrafo_home">
-			<h2>Tenemos el compromiso y el profesionalismo</h2>
-			<p>Entendemos el gran problema que se produce al externalizar un servicio con un tercero. En GrupoAVC, hemos visto infinitos casos de clientes que han contratado empresas y estas o no han concluido con su trabajo o peor aún, se han retirado sin entregar nada. Es por esto que nuestro compromiso con el cliente será que él siempre está primero en la lista y que haremos todo lo que esté a nuestro alcance para entregarle el mejor servicio que podamos. Nuestra transparencia parte desde el minuto en que lees este mensaje, pudiendo entrar a ver quién es parte de nuestro equipo y contactar a cualquiera de nosotros de manera individual para saber de nuestros perfiles. En AVC, no queremos ser "una empresa más" en el rubro, si no que buscamos ser un aliado de quienes trabajan con nosotros.</p>
-			<p>Para ser de GrupoAVC, y poder tomar un proyecto, cualquiera del equipo debe contar con a lo menos una especialización fuera de lo que fue su carrera inicial con el fin de asegurar la actualización del conocimiento y que esta al nivel de poder asistir a nuestro cliente de la mejor manera posible.</p>
+	<!-- ends banner -->
+	<main class="d-flex justify-content-between">	
+		<section class="py-3">
+			<div class="container-fluid row">	
+				<article class="col-sm-12 col-md-6 col-lg-6">
+					<h1>Tenemos el compromiso y el profesionalismo</h1>
+					<p>Entendemos el gran problema que se produce al externalizar un servicio con un tercero. En GrupoAVC, hemos visto infinitos casos de clientes que han contratado empresas y estas o no han concluido con su trabajo o peor aún, se han retirado sin entregar nada. Es por esto que nuestro compromiso con el cliente será que él siempre está primero en la lista y que haremos todo lo que esté a nuestro alcance para entregarle el mejor servicio que podamos. Nuestra transparencia parte desde el minuto en que lees este mensaje, pudiendo entrar a ver quién es parte de nuestro equipo y contactar a cualquiera de nosotros de manera individual para saber de nuestros perfiles. En AVC, no queremos ser "una empresa más" en el rubro, si no que buscamos ser un aliado de quienes trabajan con nosotros.</p>
+					<p>Para ser de GrupoAVC, y poder tomar un proyecto, cualquiera del equipo debe contar con a lo menos una especialización fuera de lo que fue su carrera inicial con el fin de asegurar la actualización del conocimiento y que esta al nivel de poder asistir a nuestro cliente de la mejor manera posible.</p>
+				</article>
+			</div>
 		</section>
-	</div>	
-		<!-- ends paragraph -->
-	<div id="imagen-home" class="imagen-home">
-		<img src="img/equipo.jpg" alt="Imagen de equipo donde se muestra el trabajo que se realiza en GrupoAVC">
-	</div>
+<!-- ends paragraph -->
+		<section class="py-3">
+			<div class="container-fluid row">	
+				<div class="col-sm-12 col-md-6 col-lg-6">
+					<img class="w-100 d-block anim-rotate" src="img/equipo.jpg" alt="Imagen de equipo donde se muestra el trabajo que se realiza en GrupoAVC">
+				</div>
+			</div>
+		</section>
 		<!-- ends image -->
+	</main>	
 	<div id="formulario">
 		<section class="formulario">
 			<h2>Contáctanos</h2>
@@ -66,14 +95,8 @@
 		<!-- ends form -->
 	</div>
 	<br>
-	<footer id="footer" class="footer">
-		<h3>Síguenos en nuestras Redes Sociales</h3>
-		<a href="index.html">
-		 <img class="logoavc" src="img/logoavc.png" alt="Logo de GrupoAVC Marketing & e-Commerce">
-		</a>
-		<a href="https://www.linkedin.com/company/grupoavc/" target="_blank">
-			<img class="logosrrss" src="img/logolinkedin.png" alt="Ícono redsocial LinkedIn">
-		</a>
-	</footer>
+	<footer> </footer>
+	<!-- Option 1: Bootstrap Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
 </html>
