--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -6,28 +6,36 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>GrupoAVC - Marketing & e-Commerce</title>
 	<link rel="shortcut icon" href="../img/faviconavc.png">
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<!-- Mi CSS Externo -->
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-	<nav>
-		<a href="../index.html">
-		<img src="../img/logoavc.png" alt="Logo de GrupoAVC Marketing & e-Commerce">
-		</a>
-		<ul>
-			<li>
-				<a href="../pages/nosotros.html">Nosotros</a>
-			</li>
-			<li>
-				<a href="../pages/servicios.html">Servicios</a>
-			</li>
-			<li>
-				<a href="../pages/clientes.html">Clientes</a>
-			</li>
-			<li>
-				<a href="../pages/contacto.html">Contacto</a>
-			</li>
-		</ul>
+	<!-- inicia nav -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  		<div class="container-fluid">
+    		<a class="navbar-brand" href="../index.html">Agencia LatteMedia</a>
+    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      			<span class="navbar-toggler-icon"></span>
+    		</button>
+    		<div class="collapse navbar-collapse" id="navbarNav">
+      			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        			<li class="nav-item">
+          				<a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+        			</li>
+        			<li class="nav-item">
+          				<a class="nav-link" href="../pages/servicios.html">Servicios</a>
+        			</li>
+        			<li class="nav-item">
+          				<a class="nav-link" href="../pages/clientes.html">Clientes</a>
+        			</li>
+        			<li class="nav-item">
+          				<a class="nav-link" href="../pages/contacto.html">Contacto</a>
+        			</li>
+      			</ul>
+    		</div>
+  		</div>
 	</nav>
 	<!-- ends nav -->
 	<main id="clientes">
@@ -100,14 +108,8 @@
 		</div>
 		<!-- ends form -->
 	</main>
-	<footer class="footer">
-		<h3>Síguenos en nuestras Redes Sociales</h3>
-		<a href="index.html">
-		 <img class="logoavc" src="../img/logoavc.png" alt="Logo de GrupoAVC Marketing & e-Commerce">
-		</a>
-		<a href="https://www.linkedin.com/company/grupoavc/" target="_blank">
-			<img class="logosrrss" src="../img/logolinkedin.png" alt="Ícono redsocial LinkedIn">
-		</a>
-	</footer>
+	<footer> </footer>
+	<!-- Option 1: Bootstrap Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous">
 </body>
 </html>
