--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<!-- inicia nav -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   		<div class="container-fluid">
     		<a class="navbar-brand" href="../index.html">Agencia LatteMedia</a>
     		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,44 +52,47 @@
 		</div>	
 		<!-- ends paragraph -->
 		<section class="formulario_page_contacto">
-			<!-- <h2>Contáctanos</h2> -->
-			<form action="contactos.php">
-				<label for="nombre">Nombre:</label>
-				<input type="text" id="nombre" placeholder="Nombre" required>
-				<br>
-				<br>
-				<label for="apellido">Apellido:</label>
-				<input type="text" id="apellido" placeholder="Apellido" required>
-				<br>
-				<br>
-				<label for="email">Email:</label>
-				<input type="email" id="email" placeholder="ejemplo@mail.com" required>
-				<br>
-				<br>
-				<label for="telefono">Teléfono:</label>
-				<input type="tel" id="telefono" placeholder="+56 9 XXXX XXXX" required>
-				<br>
-				<br>
-				<br>
-				<fieldset>
-					<legend>¿Cómo quieres que te contactemos?</legend>
-					<label for="llamada">Quiero que me llamen</label>
-					<input type="radio" id="llamada" value="telefono" name="contacto">
-					<br>
-					<label for="mail">Quiero que me envíen un mail</label>
-					<input type="radio" id="mail" value="email" name="contacto">
-				</fieldset>
-				<label for="mensaje">Deje su mensaje</label>
-				<br>
-				<textarea name="" id="mensaje" cols="30" rows="10"></textarea>
-				<br>
-				<input type="reset" value="Cancelar">
-				<input type="submit" value="Enviar">
+			<div class="row mb-3">
+    		<label for="nombre" class="col-sm-2 col-form-label">Nombre</label>
+    		<div class="col-sm-10">
+      			<input type="text" class="form-control" id="nombre" placeholder="Nombre" required>
+    		</div>
+  		</div>
+  		<div class="row mb-3">
+    		<label for="email" class="col-sm-2 col-form-label">Correo electrónico</label>
+    		<div class="col-sm-10">
+      			<input type="email" class="form-control" id="email" placeholder="ejemplo@correo.com" required>
+    		</div>
+  		</div>
+  		<div class="row mb-3">
+    		<label for="telefono" class="col-sm-2 col-form-label">Teléfono</label>
+    		<div class="col-sm-10">
+      			<input type="tel" class="form-control" id="telefono" placeholder="+56 9 XXXX XXXX" required>
+    		</div>
+  		</div>
+	  	<fieldset class="row mb-3">
+	    	<legend class="col-form-label col-sm-2 pt-0">¿Cómo quieres que te contactemos?</legend>
+	    	<div class="col-sm-10">
+	      		<div class="form-check">
+	       			<input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+	       			<label class="form-check-label" for="gridRadios1">Correo electrónico</label>
+	      		</div>	
+	      		<div class="form-check">
+	        		<input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+	        		<label class="form-check-label" for="gridRadios2">Teléfono</label>
+	      		</div>
+	    	</div>
+		</fieldset>
+	  	<div class="row mb-3">
+  			<label for="mensaje" class="form-label">Mensaje</label>
+  			<textarea class="form-control" id="mensaje" rows="3" placeholder="Escriba algún comentario aquí..."></textarea>
+	  	</div>
+  		<button type="submit" class="btn btn-css">Enviar</button>
 		</section>
 		<!-- ends form -->
 	</main>
 	<footer> </footer>
 	<!-- Option 1: Bootstrap Bundle with Popper -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
 </html>
