--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -6,11 +6,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>GrupoAVC - Marketing & e-Commerce</title>
 	<link rel="shortcut icon" href="../img/faviconavc.png">
+	<!-- Metas SEO -->
+	<meta name="description" content="Clientes con los que hemos trabajado, tanto nacional como internacionalmente">
+	<meta name="keywords" content="e-commerce, marketing, SEO, instagram, shopify">
+	<meta name="author" content="Óscar Cabezas Neira">
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<!-- Mi CSS Externo -->
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
+<title>Nuestros clientes</title>
 <body>
 	<!-- inicia nav -->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
