--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>GrupoAVC - Marketing & e-Commerce</title>
+	<title>Agencia LatteMedia - Marketing & e-Commerce</title>
 	<link rel="shortcut icon" href="img/faviconavc.png">
+	<!-- Metas SEO -->
+	<meta name="description" content="Somos la nueva agencia de marketing & e-commerce de Chile">
+	<meta name="keywords" content="e-commerce, marketing, SEO, instagram, shopify">
+	<meta name="author" content="Óscar Cabezas Neira">
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<!-- Mi CSS Externo -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<title>Agencia LatteMedia</title>
 <body>
 	<!-- inicia nav -->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
@@ -104,10 +109,12 @@
   			<label for="mensaje" class="form-label">Mensaje</label>
   			<textarea class="form-control" id="mensaje" rows="3" placeholder="Escriba algún comentario aquí..."></textarea>
 	  	</div>
-  		<button type="submit" class="btn btn-css">Enviar</button>
+  		<button type="submit" class="btn btn-css btn-base">Enviar</button>
 	</form>
 	<br>
-	<footer> </footer>
+	<footer class="bg-footer">
+		
+	</footer>
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
