--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>GrupoAVC - Marketing & e-Commerce</title>
-	<link rel="shortcut icon" href="../img/faviconavc.png">
+	<link rel="shortcut icon" href="../img/faviconlatte.png">
 	<!-- Metas SEO -->
 	<meta name="description" content="Contáctanos y te responderemos a la brevedad posible">
 	<meta name="keywords" content="e-commerce, marketing, SEO, instagram, shopify">
