Avance y arreglo de páginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,11 +92,65 @@
   			<label for="mensaje" class="form-label">Mensaje</label>
   			<textarea class="form-control" id="mensaje" rows="3" placeholder="Escriba algún comentario aquí..."></textarea>
 	  	</div>
-  		<button type="submit" class="btn btn-css">Enviar</button>
+  		<button type="submit" class="btn btn-visita">Enviar</button>
 		</section>
 		<!-- ends form -->
 	</main>
-	<footer> </footer>
+	<div class="container bg-footer">
+	  <footer class="py-5">
+	    <div class="row">
+	      <div class="col-2">
+	      <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+	        <img src="../img/faviconlatte.png" alt="Logo LatteMedia">
+	      </a>
+	      <p class="text-muted">&copy; 2022</p>
+	      </div>
+
+	      <div class="col-2">
+	        <h5>Menú inferior</h5>
+	        <ul class="nav flex-column">
+	          <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Inicio</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/nosotros.html" class="nav-link p-0 text-muted">Nosotros</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/servicios.html" class="nav-link p-0 text-muted">Servicios</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/clientes.html" class="nav-link p-0 text-muted">Clientes</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/contacto.html" class="nav-link p-0 text-muted">Contacto</a></li>
+	        </ul>
+	      </div>
+
+	      <div class="col-2">
+	        <h5>RRSS</h5>
+	        <ul class="nav flex-column">
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Facebook</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">LinkedIn</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Facebook</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"></a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"></a></li>
+	        </ul>
+	      </div>
+
+	      <div class="col-4 offset-1">
+	        <form>
+	          <h5>Suscríbete a nuestro boletín</h5>
+	          <p>Todas nuestras novedades en tu bandeja de entrada.</p>
+	          <div class="d-flex w-100 gap-2">
+	            <label for="newsletter1" class="visually-hidden">Email address</label>
+	            <input id="newsletter1" type="text" class="form-control" placeholder="Email">
+	            <button class="btn btn-base" type="button">Suscribir</button>
+	          </div>
+	        </form>
+	      </div>
+	    </div>
+
+	    <div class="d-flex justify-content-between py-4 my-4 border-top">
+	      <p>&copy; 2022 LatteMedia. All rights reserved.</p>
+	      <ul class="list-unstyled d-flex">
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+	      </ul>
+	    </div>
+	  </footer>
+	</div>
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
