--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -44,15 +44,16 @@
 	</nav>
 	<!-- ends nav -->
 	<h1 class="h1-page-nosotros">Somos Agencia LatteMedia</h1>
-	<div class="d-flex align-items-center">
-  		<div class="flex-shrink-0">
-    		<img src="../img/reunion.png" alt="Imagen que muestra una reunión simulando uno de nuestros servicios de asesoría">
-  		</div>
-  		<div class="flex-grow-1 ms-3 parrafo">
-    		<p>Entendemos el gran problema que se produce al externalizar un servicio con un tercero. En GrupoAVC, hemos visto infinitos casos de clientes que han contratado empresas y estas o no han concluido con su trabajo o peor aún, se han retirado sin entregar nada. Es por esto que nuestro compromiso con el cliente será que él siempre está primero en la lista y que haremos todo lo que esté a nuestro alcance para entregarle el mejor servicio que podamos. Nuestra transparencia parte desde el minuto en que lees este mensaje, pudiendo entrar a ver quién es parte de nuestro equipo y contactar a cualquiera de nosotros de manera individual para saber de nuestros perfiles. En AVC, no queremos ser "una empresa más" en el rubro, si no que buscamos ser un aliado de quienes trabajan con nosotros.
-    		Para ser de GrupoAVC, y poder tomar un proyecto, cualquiera del equipo debe contar con a lo menos una especialización fuera de lo que fue su carrera inicial con el fin de asegurar la actualización del conocimiento y que esta al nivel de poder asistir a nuestro cliente de la mejor manera posible.</p>
-    	<a href="../pages/servicios.html" class="btn btn-css">Ver servicios</a>
-  		</div>
+	<div class="container text-center">
+	  <div class="row">
+	    <div class="col-sm-12 col-lg-6 col-xl-8">
+	    	<img class="img-fluid" src="../img/team.jpg" alt="Imagen que muestra una reunión simulando uno de nuestros servicios de asesoría">
+	    </div>
+	    <div class="col-sm-12 col-lg-6 col-xl-4">
+	    	<p>Cuando se trata de enfrentar los momentos difíciles de una empresa, Agencia LatteMedia se encuentra en completa capacidad de enfrentar aquellos puntos que puedan ser de alta complejidad. En nuestros valores está el siempre ser abierto con el cliente y dar el 100% para satisfacer sus necesidades, procurando que su negocio siempre esté en buenas manos.</p>
+    		<a href="../pages/servicios.html" class="btn btn-success">Ver servicios</a>
+	    </div>
+	  </div>
 	</div>
 		<!-- ends cuerpo e imagen -->
 	<form class="formulario_page_contacto">
@@ -92,10 +93,64 @@
   			<label for="mensaje" class="form-label">Mensaje</label>
   			<textarea class="form-control" id="mensaje" rows="3" placeholder="Escriba algún comentario aquí..."></textarea>
 	  	</div>
-  		<button type="submit" class="btn btn-css">Enviar</button>
+  		<button type="submit" class="btn btn-base">Enviar</button>
 	</form>
 		<!-- ends form -->
-	<footer> </footer>
+	<div class="container bg-footer">
+	  <footer class="py-5">
+	    <div class="row">
+	      <div class="col-2">
+	      <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+	        <img src="../img/faviconlatte.png" alt="Logo LatteMedia">
+	      </a>
+	      <p class="text-muted">&copy; 2022</p>
+	      </div>
+
+	      <div class="col-2">
+	        <h5>Menú inferior</h5>
+	        <ul class="nav flex-column">
+	          <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Inicio</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/nosotros.html" class="nav-link p-0 text-muted">Nosotros</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/servicios.html" class="nav-link p-0 text-muted">Servicios</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/clientes.html" class="nav-link p-0 text-muted">Clientes</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/contacto.html" class="nav-link p-0 text-muted">Contacto</a></li>
+	        </ul>
+	      </div>
+
+	      <div class="col-2">
+	        <h5>RRSS</h5>
+	        <ul class="nav flex-column">
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Facebook</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">LinkedIn</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Facebook</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"></a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"></a></li>
+	        </ul>
+	      </div>
+
+	      <div class="col-4 offset-1">
+	        <form>
+	          <h5>Suscríbete a nuestro boletín</h5>
+	          <p>Todas nuestras novedades en tu bandeja de entrada.</p>
+	          <div class="d-flex w-100 gap-2">
+	            <label for="newsletter1" class="visually-hidden">Email address</label>
+	            <input id="newsletter1" type="text" class="form-control" placeholder="Email">
+	            <button class="btn btn-base" type="button">Suscribir</button>
+	          </div>
+	        </form>
+	      </div>
+	    </div>
+
+	    <div class="d-flex justify-content-between py-4 my-4 border-top">
+	      <p>&copy; 2022 LatteMedia. All rights reserved.</p>
+	      <ul class="list-unstyled d-flex">
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+	      </ul>
+	    </div>
+	  </footer>
+	</div>
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
