--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -44,29 +44,29 @@
 	</nav>
 	<!-- ends nav -->
 	<h1 class="h1-page-servicios">Nuestros servicios</h1>
-	<div id="lista-servicios" class="lista_servicios">
-		<ul>
-			<li>
-				<a>Consultoría</a>
-			</li>
-			<li>
-				<a>Diseño Web</a>
-			</li>
-			<li>
-				<a>Marketing Digital</a>
-			</li>
-		</ul>
+	<p class="p-page-servicios margin-servicios">Cuando se trata de enfrentar los momentos difíciles de una empresa, GrupoAVC se encuentra en completa capacidad de enfrentar aquellos puntos que puedan ser de alta complejidad. En nuestros valores está el siempre ser abierto con el cliente y dar el 100% para satisfacer sus necesidades, procurando que su negocio siempre esté en buenas manos.</p>
+	<div class="container text-center">
+	  <div class="row">
+	    <div class="col-sm-12 col-lg-8 col-xl-8">
+	    	<iframe class="video_ejemplo" width="560" height="315" src="https://www.youtube.com/embed/FhkOuxTf-Ug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	    </div>
+	    <div class="lista_servicios col-sm-12 col-lg-4 col-xl-4">
+			<ul>
+				<li>
+					<a>Consultoría</a>
+				</li>
+				<li>
+					<a>Diseño Web</a>
+				</li>
+				<li>
+					<a>Marketing Digital</a>
+				</li>
+			</ul>
+    		<a href="../pages/servicios.html" class="btn btn-success">Conoce nuestros clientes</a>
+	    </div>
+	  </div>
 	</div>
-<!-- ends lista servicios -->
-	<div id="video-servicios">
-		<iframe class="video_ejemplo" width="560" height="315" src="https://www.youtube.com/embed/FhkOuxTf-Ug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
-<!-- ends video -->
-	<div id="cuerpo-servicios" class="parrafo">
-		<h2>Tenemos el compromiso y el profesionalismo</h2>
-		<p>Cuando se trata de enfrentar los momentos difíciles de una empresa, GrupoAVC se encuentra en completa capacidad de enfrentar aquellos puntos que puedan ser de alta complejidad. En nuestros valores está el siempre ser abierto con el cliente y dar el 100% para satisfacer sus necesidades, procurando que su negocio siempre esté en buenas manos.</p>
-	</div>
-<!-- ends paragraph -->
+	<!-- ends prueba -->
 	<form class="formulario_page_contacto">
 		<h2>Contáctanos</h2>
 		<div class="row mb-3">
@@ -104,10 +104,64 @@
   			<label for="mensaje" class="form-label">Mensaje</label>
   			<textarea class="form-control" id="mensaje" rows="3" placeholder="Escriba algún comentario aquí..."></textarea>
 	  	</div>
-  		<button type="submit" class="btn btn-css">Enviar</button>
+  		<button type="submit" class="btn btn-base">Enviar</button>
 	</form>
 <!-- ends form -->
-	<footer> </footer>
+	<div class="container bg-footer">
+	  <footer class="py-5">
+	    <div class="row">
+	      <div class="col-2">
+	      <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+	        <img src="../img/faviconlatte.png" alt="Logo LatteMedia">
+	      </a>
+	      <p class="text-muted">&copy; 2022</p>
+	      </div>
+
+	      <div class="col-2">
+	        <h5>Menú inferior</h5>
+	        <ul class="nav flex-column">
+	          <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Inicio</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/nosotros.html" class="nav-link p-0 text-muted">Nosotros</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/servicios.html" class="nav-link p-0 text-muted">Servicios</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/clientes.html" class="nav-link p-0 text-muted">Clientes</a></li>
+	          <li class="nav-item mb-2"><a href="../pages/contacto.html" class="nav-link p-0 text-muted">Contacto</a></li>
+	        </ul>
+	      </div>
+
+	      <div class="col-2">
+	        <h5>RRSS</h5>
+	        <ul class="nav flex-column">
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Facebook</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">LinkedIn</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Facebook</a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"></a></li>
+	          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"></a></li>
+	        </ul>
+	      </div>
+
+	      <div class="col-4 offset-1">
+	        <form>
+	          <h5>Suscríbete a nuestro boletín</h5>
+	          <p>Todas nuestras novedades en tu bandeja de entrada.</p>
+	          <div class="d-flex w-100 gap-2">
+	            <label for="newsletter1" class="visually-hidden">Email address</label>
+	            <input id="newsletter1" type="text" class="form-control" placeholder="Email">
+	            <button class="btn btn-base" type="button">Suscribir</button>
+	          </div>
+	        </form>
+	      </div>
+	    </div>
+
+	    <div class="d-flex justify-content-between py-4 my-4 border-top">
+	      <p>&copy; 2022 LatteMedia. All rights reserved.</p>
+	      <ul class="list-unstyled d-flex">
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+	        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+	      </ul>
+	    </div>
+	  </footer>
+	</div>
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
