--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>GrupoAVC - Marketing & e-Commerce</title>
+	<title>Servicios - Agencia LatteMedia</title>
 	<link rel="shortcut icon" href="../img/faviconlatte.png">
 	<!-- Metas SEO -->
 	<meta name="description" content="Nuestros servicios están diseñados para ayudarte en tus proyectos">
@@ -47,8 +47,8 @@
 	<p class="p-page-servicios margin-servicios">Cuando se trata de enfrentar los momentos difíciles de una empresa, GrupoAVC se encuentra en completa capacidad de enfrentar aquellos puntos que puedan ser de alta complejidad. En nuestros valores está el siempre ser abierto con el cliente y dar el 100% para satisfacer sus necesidades, procurando que su negocio siempre esté en buenas manos.</p>
 	<div class="container text-center">
 	  <div class="row">
-	    <div class="col-sm-12 col-lg-8 col-xl-8">
-	    	<iframe class="video_ejemplo" width="560" height="315" src="https://www.youtube.com/embed/FhkOuxTf-Ug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	    <div class="col-sm-12 col-lg-8 col-xl-8 img-fluid">
+	    	<iframe width="560" height="315" src="https://www.youtube.com/embed/FhkOuxTf-Ug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	    </div>
 	    <div class="lista_servicios col-sm-12 col-lg-4 col-xl-4">
 			<ul>
