--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>GrupoAVC - Marketing & e-Commerce</title>
+	<title>Nosotros - Agencia LatteMedia</title>
 	<link rel="shortcut icon" href="../img/faviconlatte.png">
 	<!-- Metas SEO -->
 	<meta name="description" content="Te mostramos quiénes somos y por qué nos apasiona lo que hacemos">
