--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -20,7 +20,9 @@
 	<!-- inicia nav -->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   		<div class="container-fluid">
-    		<a class="navbar-brand" href="../index.html">Agencia LatteMedia</a>
+    		<a class="navbar-brand" href="../index.html">
+    			<img src="../img/lattemedia.png" alt="Logo Agencia LatteMedia" width="200" height="40">
+    		</a>
     		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       			<span class="navbar-toggler-icon"></span>
     		</button>
@@ -111,8 +113,8 @@
 	  <footer class="py-5">
 	    <div class="row">
 	      <div class="col-2">
-	      <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-	        <img src="../img/faviconlatte.png" alt="Logo LatteMedia">
+	      <a href="#" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+	        <img src="../img/faviconlatte.png" alt="Logo LatteMedia" width="60" height="60">
 	      </a>
 	      <p class="text-muted">&copy; 2022</p>
 	      </div>
